--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
   <div class="container">
     <div class="glass-card">
       <h2>About Me</h2>
-      <p>I’m a passionate and dedicated software developer with a strong interest in building clean, user-friendly applications. While my primary focus is front-end development, I’m also enthusiastic about full-stack concepts and continuously strive to broaden my skillset.</p>
-      <p>I’m always curious and eager to explore new technologies, frameworks, and development trends. I value teamwork and collaboration, and I enjoy contributing in a team environment where ideas are shared and challenges are solved together.</p>
-      <p>Outside of tech, I’m actively involved in athletics and hold certifications that reflect my commitment to discipline, fitness, and personal growth. This mindset carries over into my work—driven, focused, and ready to take on challenges.</p>
+      <p>I’m a passionate and dedicated software developer with a strong interest in building clean, user-friendly applications.</p>
+      <p>My focus is front-end development, but I’m expanding into full-stack. I love exploring new tech and frameworks.</p>
+      <p>Outside tech, I’m active in athletics and love working in collaborative team environments.</p>
     </div>
   </div>
 </body>
