--- a/index.html
+++ b/index.html
@@ -4,90 +4,6 @@
   <meta charset="UTF-8" />
   <title>Supriya | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    /* Reset & Base Styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', sans-serif;
-    }
-
-    body {
-      background: linear-gradient(135deg, #2b2e4a, #4b3869);
-      color: #333;
-      padding: 30px;
-    }
-
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      margin-bottom: 40px;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover {
-      color: #ffd6f6;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-      text-align: center;
-    }
-
-    p {
-      text-align: center;
-      margin-bottom: 40px;
-    }
-
-    .glass-card {
-      background: rgba(255, 255, 255, 0.25);
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      border-radius: 16px;
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.2);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      padding: 20px 25px;
-      margin-bottom: 25px;
-      transition: all 0.4s ease;
-      cursor: pointer;
-      overflow: hidden;
-      height: 60px;
-    }
-
-    .glass-card h2 {
-      font-size: 1.4rem;
-      margin-bottom: 10px;
-    }
-
-    .glass-card:hover {
-      height: auto;
-      background: rgba(255, 255, 255, 0.4);
-      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
-    }
-
-    .glass-card ul {
-      list-style: square;
-      margin-left: 20px;
-    }
-
-    .glass-card li {
-      margin: 5px 0;
-    }
-  </style>
 </head>
 <body>
   <nav>
@@ -117,13 +33,11 @@
     <div class="glass-card">
       <h2>🛠️ Skills</h2>
       <ul>
-        <li>Programming: Python, Java</li>
-        <li>Web: ReactJS, HTML, Django, AngularJS</li>
-        <li>Version Control: Git</li>
-        <li>Machine Learning: Scikit-learn, TensorFlow, MATLAB, Pandas, NumPy</li>
-        <li>Image Processing: OpenCV</li>
-        <li>Databases: MySQL</li>
-        <li>Tools: VSCode, GitHub, PyQt5, Canva</li>
+        <li>Python, Java</li>
+        <li>ReactJS, HTML, Django, AngularJS</li>
+        <li>Git, GitHub</li>
+        <li>TensorFlow, Pandas, NumPy, OpenCV</li>
+        <li>MySQL, MATLAB</li>
       </ul>
     </div>
   </div>
