--- a/projects.html
+++ b/projects.html
@@ -59,18 +59,60 @@
     </div>
 
     <div id="academic" class="tab-content active">
-      <!-- Add academic project cards here -->
       <div class="glass-card">
-        <h2>Biometric Watermarking</h2>
-        <p>Embedded fingerprint data into iris images using DWT, DCT, and SVD for secure watermarking.</p>
+        <img src="assets/biometric.jpeg" class="project-image" alt="Biometric Watermarking" />
+        <h2>Biometric Watermarking using Deep Learning</h2>
+        <p>Embedded fingerprint data into iris images using DWT, DCT, and SVD for secure, attack-resistant watermarking in digital ID, medical records, and copyright protection.</p>
+      </div>
+
+      <div class="glass-card">
+        <img src="assets/social media analytics.jpg" class="project-image" alt="Social Media Analytics" />
+        <h2>Real-Time Social Media Analytics</h2>
+        <p>Built a pipeline for real-time sentiment analysis and topic modeling. Optimized via Grid Search and deployed using Flask API.</p>
+      </div>
+
+      <div class="glass-card">
+        <img src="assets/brain tumor.png" class="project-image" alt="Brain Tumor Detection" />
+        <h2>Brain Tumor Detection using ML</h2>
+        <p>Used CNNs to classify brain tumors from MRI images. Integrated PyQt5 GUI for predictions with OpenCV preprocessing.</p>
+      </div>
+
+      <div class="glass-card">
+        <img src="assets/Movie booking.jpg" class="project-image" alt="Movie Booking" />
+        <h2>Movie Ticket Booking System</h2>
+        <p>Django + MySQL system with full CRUD, user login, and movie schedule management for booking tickets.</p>
       </div>
     </div>
 
     <div id="personal" class="tab-content">
-      <!-- Add personal project cards here -->
       <div class="glass-card">
+        <img src="assets/food label.pdf" class="project-image" alt="Food Label" />
+        <h2>Label Design for Food Business</h2>
+        <p>Designed branding and clear food packaging labels using Canva for a local business.</p>
+      </div>
+
+      <div class="glass-card">
+        <img src="assets/hd invite.png" class="project-image" alt="Invitations" />
+        <h2>Hostel Event Invitations</h2>
+        <p>Designed digital and print invitations for college hostel events using Canva and Adobe tools.</p>
+      </div>
+
+      <div class="glass-card">
+        <img src="assets/Typing.png" class="project-image" alt="Typing Game" />
         <h2>Typing Speed Game</h2>
-        <p>Browser game built in HTML/CSS/JS to improve typing skills.</p>
+        <p>Fun browser game built in HTML/CSS/JS to help improve typing accuracy and speed in real-time.</p>
+      </div>
+
+      <div class="glass-card">
+        <img src="assets/Tiles.png" class="project-image" alt="Memory Game" />
+        <h2>Memory Matching Game</h2>
+        <p>Flip-card matching game to test and train memory. Built using JavaScript logic and CSS animations.</p>
+      </div>
+
+      <div class="glass-card">
+        <img src="assets/ginger&milk.png" class="project-image" alt="Flappy Gingerbread" />
+        <h2>Flappy Gingerbread Game</h2>
+        <p>Inspired by Flappy Bird — dodge milk bottles with a flying gingerbread. Created using JS canvas.</p>
       </div>
     </div>
   </div>
