--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,90 @@
       display: flex;
     }
   </style>
+  <style>
+  .tab-buttons {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-bottom: 2rem;
+  }
+
+  .tab-buttons button {
+    padding: 0.5rem 1rem;
+    border: none;
+    background: rgba(255, 255, 255, 0.08);
+    color: #fff;
+    cursor: pointer;
+    backdrop-filter: blur(8px);
+    border-radius: 8px;
+    font-weight: 500;
+  }
+
+  .tab-buttons button.active {
+    background-color: #00ffe7;
+    color: #000;
+  }
+
+  .tab-content {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+  }
+
+  .tab-content.active {
+    display: flex;
+  }
+
+  /* Image visible fix */
+  .glass-card {
+    max-width: 640px;
+    width: 100%;
+    padding: 2rem;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 20px;
+    backdrop-filter: blur(25px);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease;
+    color: #fff;
+    text-align: center;
+  }
+
+  .glass-card:hover {
+    transform: scale(1.02);
+  }
+
+  .glass-card img.project-image {
+    width: 100%;
+    height: 220px;
+    object-fit: cover;
+    border-radius: 12px;
+    margin-bottom: 1rem;
+  }
+
+  .glass-card h2 {
+    font-size: 1.3rem;
+    margin-bottom: 0.6rem;
+  }
+
+  .glass-card p {
+    font-size: 0.95rem;
+    line-height: 1.5;
+  }
+
+  @media screen and (max-width: 600px) {
+    .glass-card {
+      padding: 1.2rem;
+    }
+
+    .glass-card img.project-image {
+      height: 180px;
+    }
+  }
+</style>
+
 </head>
 <body>
   <nav>
