--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       <ul>
         <li>Python, Java</li>
         <li>ReactJS, HTML, Django, AngularJS</li>
-        <li>Git, GitHub</li>
         <li>TensorFlow, Pandas, NumPy, OpenCV</li>
-        <li>MySQL, MATLAB</li>
+        <li>MySQL</li>
+        <li>GitHub, Visual Code, Expo, Canva</li>
       </ul>
     </div>
   </div>
