--- a/projects.html
+++ b/projects.html
@@ -170,7 +170,7 @@
 
     <div id="personal" class="tab-content">
       <div class="glass-card">
-        <img src="assets/food label.pdf" class="project-image" alt="Food Label" />
+        <img src="assets/food label.pdf" class="application/pdf" alt="Food Label" />
         <h2>Label Design for Food Business</h2>
         <p>Designed branding and clear food packaging labels using Canva for a local business.</p>
       </div>
@@ -184,19 +184,19 @@
       <div class="glass-card">
         <img src="assets/Typing.png" class="project-image" alt="Typing Game" />
         <h2>Typing Speed Game</h2>
-        <p>Fun browser game built in HTML/CSS/JS to help improve typing accuracy and speed in real-time.</p>
+        <p>Fun browser game built in HTML to help improve typing accuracy and speed in real-time.</p>
       </div>
 
       <div class="glass-card">
         <img src="assets/Tiles.png" class="project-image" alt="Memory Game" />
         <h2>Memory Matching Game</h2>
-        <p>Flip-card matching game to test and train memory. Built using JavaScript logic and CSS animations.</p>
+        <p>Flip-card matching game to test and train memory. Built using HTML.</p>
       </div>
 
       <div class="glass-card">
         <img src="assets/ginger&milk.png" class="project-image" alt="Flappy Gingerbread" />
         <h2>Flappy Gingerbread Game</h2>
-        <p>Inspired by Flappy Bird — dodge milk bottles with a flying gingerbread. Created using JS canvas.</p>
+        <p>Inspired by Flappy Bird — dodge milk obstacles with a flying gingerbread.</p>
       </div>
     </div>
   </div>
