--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
   <div class="container">
     <div class="glass-card">
       <h2>About Me</h2>
-      <p>I’m a passionate and dedicated software developer with a strong interest in building clean, user-friendly applications.</p>
-      <p>My focus is front-end development, but I’m expanding into full-stack. I love exploring new tech and frameworks.</p>
-      <p>Outside tech, I’m active in athletics and love working in collaborative team environments.</p>
+      <p>I’m a driven and versatile software developer with a passion for creating clean, intuitive, and impactful digital experiences. My work reflects a commitment to quality, curiosity, and continuous improvement.</p>
+      <p>I thrive on building innovative solutions and enjoy diving into new technologies, tools, and frameworks. I’ve completed multiple projects involving machine learning, combining analytical thinking with creative problem-solving, and I’m actively expanding my capabilities in full-stack development.</p>
+      <p>Beyond coding, I bring the same discipline and energy to athletics and teamwork — always eager to collaborate, exchange ideas, and grow with those around me.</p>
     </div>
   </div>
 </body>
