--- a/projects.html
+++ b/projects.html
@@ -170,7 +170,7 @@
 
     <div id="personal" class="tab-content">
       <div class="glass-card">
-        <img src="assets/food label.pdf" class="application/pdf" alt="Food Label" />
+        <img src="assets/food label.png" class="project-image" alt="Food Label" />
         <h2>Label Design for Food Business</h2>
         <p>Designed branding and clear food packaging labels using Canva for a local business.</p>
       </div>
