--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
 
     <div class="glass-card">
       <h2>💼 Experience</h2>
-      <p>Web Developer Intern at Metricdust LLC</p>
+      <p>Web Developer Intern</p>
+      <p>Metricdust LLC</p>
       <p>Apr/2025 – Jul/2025</p>
     </div>
 
     <div class="glass-card">
       <h2>🎓 Education</h2>
       <p>Bachelor of Engineering in Computer Science</p>
+      <p>VTU,India</p>
       <p>GPA: 3.6</p>
     </div>
 
