--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
   <div class="container">
     <!-- Girl Animation Scene -->
     <div class="intro-scene">
-      <!-- Replace below image with a working animated girl walking GIF -->
-      <img class="girl" src="https://media.tenor.com/b1N4kIFPBtcAAAAi/girl-walk.gif" alt="Girl walking" />
+      <!-- ✅ Working animated walking girl GIF -->
+      <img class="girl" src="https://upload.wikimedia.org/wikipedia/commons/8/88/Walking_girl.gif" alt="Girl walking" />
 
+      <!-- Speech Bubble -->
       <div class="speech-bubble">
         Hello, I'm Supriya.<br />
         Welcome to my personal portfolio website.
