--- a/index.html
+++ b/index.html
@@ -5,46 +5,62 @@
   <title>Supriya | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body {
+    /* Reset & Base Styles */
+    * {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, #1e2a38, #0f1724);
-      color: white;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    body {
+      background: linear-gradient(135deg, #2b2e4a, #4b3869);
+      color: #fff;
+      padding: 30px;
     }
 
     nav {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 1rem;
+      gap: 30px;
+      margin-bottom: 40px;
       background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(8px);
+      backdrop-filter: blur(10px);
       padding: 1rem;
-      position: sticky;
-      top: 0;
-      z-index: 10;
+      border-radius: 10px;
     }
 
     nav a {
-      color: white;
       text-decoration: none;
+      color: #fff;
       font-weight: bold;
       padding: 0.5rem 1rem;
+      border-radius: 6px;
       transition: background 0.3s ease;
     }
 
     nav a:hover {
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 8px;
+      background: rgba(255, 255, 255, 0.15);
     }
 
     .container {
-      max-width: 960px;
-      margin: 2rem auto;
-      padding: 1rem;
+      max-width: 800px;
+      margin: 0 auto;
     }
 
-    /* Girl Animation Section */
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+      text-align: center;
+    }
+
+    p {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    /* Intro Animation Section */
     .intro-scene {
       position: relative;
       height: 280px;
@@ -58,7 +74,8 @@
       bottom: 0;
       left: -150px;
       opacity: 0;
-      animation: walkIn 3s forwards ease-out;
+      animation: walkIn 3s forwards ease-out, waveHand 2s 3s infinite alternate ease-in-out;
+      transform-origin: bottom center;
     }
 
     @keyframes walkIn {
@@ -67,19 +84,26 @@
       100% { left: 80px; opacity: 1; }
     }
 
+    @keyframes waveHand {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(6deg); }
+    }
+
     .speech-bubble {
       position: absolute;
       bottom: 120px;
       left: 220px;
       max-width: 300px;
-      background: rgba(255, 255, 255, 0.1);
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      border-radius: 16px;
-      padding: 1rem 1.5rem;
-      color: white;
+      background: #222;
+      border: 3px solid #fff;
+      border-radius: 0;
+      padding: 1rem 1.2rem;
+      color: #0ff;
+      font-family: 'Courier New', monospace;
       font-size: 1rem;
-      backdrop-filter: blur(10px);
       opacity: 0;
+      white-space: pre-wrap;
+      word-wrap: break-word;
       animation: showBubble 1s forwards;
       animation-delay: 3s;
     }
@@ -91,29 +115,58 @@
     .speech-bubble::after {
       content: "";
       position: absolute;
-      left: -10px;
+      left: -20px;
       bottom: 20px;
-      border: 10px solid transparent;
-      border-right-color: rgba(255, 255, 255, 0.3);
+      width: 0;
+      height: 0;
+      border-top: 10px solid transparent;
+      border-bottom: 10px solid transparent;
+      border-right: 20px solid #fff;
     }
 
     .glass-card {
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(255, 255, 255, 0.25);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      border-radius: 16px;
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.2);
       backdrop-filter: blur(10px);
-      border-radius: 12px;
-      padding: 1rem;
-      margin-bottom: 2rem;
+      -webkit-backdrop-filter: blur(10px);
+      padding: 20px 25px;
+      margin-bottom: 25px;
+      transition: all 0.4s ease;
+      cursor: pointer;
+      overflow: hidden;
+      height: 60px;
     }
 
-    /* Responsive Navigation */
+    .glass-card h2 {
+      font-size: 1.4rem;
+      margin-bottom: 10px;
+    }
+
+    .glass-card:hover {
+      height: auto;
+      background: rgba(255, 255, 255, 0.4);
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+    }
+
+    .glass-card ul {
+      list-style: square;
+      margin-left: 20px;
+    }
+
+    .glass-card li {
+      margin: 5px 0;
+    }
+
     @media (max-width: 600px) {
       nav {
         flex-direction: column;
-        align-items: center;
+        gap: 12px;
       }
 
       .speech-bubble {
-        left: 160px;
+        left: 140px;
         font-size: 0.9rem;
       }
     }
@@ -121,48 +174,69 @@
 </head>
 <body>
   <nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Projects</a>
-    <a href="#">Resume</a>
-    <a href="#">Contact</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="projects.html">Projects</a>
+    <a href="resume.html">Resume</a>
+    <a href="contact.html">Contact</a>
   </nav>
 
   <div class="container">
-    <!-- ✅ Use your saved image here -->
+    <!-- 👧 Girl walking in -->
     <div class="intro-scene">
       <img class="girl" src="assets/pixelme.jpg" alt="Girl walking in" />
-
-      <div class="speech-bubble">
-        Hello, I'm Supriya.<br />
-        Welcome to my personal portfolio website.
+      <div class="speech-bubble" id="speech">
+        <!-- Typing will appear here -->
       </div>
     </div>
 
+    <h1>Hello, I'm Supriya 👋</h1>
+    <p>Welcome to my personal portfolio website.</p>
+
     <div class="glass-card">
       <h2>💼 Experience</h2>
-      <p>Web Developer Intern</p>
-      <p>Metricdust LLC</p>
+      <p>Web Developer Intern at Metricdust LLC</p>
       <p>Apr/2025 – Jul/2025</p>
     </div>
 
     <div class="glass-card">
       <h2>🎓 Education</h2>
       <p>Bachelor of Engineering in Computer Science</p>
-      <p>VTU, India</p>
       <p>GPA: 3.6</p>
     </div>
 
     <div class="glass-card">
       <h2>🛠️ Skills</h2>
       <ul>
-        <li>Python, Java</li>
-        <li>ReactJS, HTML, Django, AngularJS</li>
-        <li>TensorFlow, Pandas, NumPy, OpenCV</li>
-        <li>MySQL</li>
-        <li>GitHub, Visual Code, Expo, Canva</li>
+        <li>Programming: Python, Java</li>
+        <li>Web: ReactJS, HTML, Django, AngularJS</li>
+        <li>Version Control: Git</li>
+        <li>Machine Learning: Scikit-learn, TensorFlow, MATLAB, Pandas, NumPy</li>
+        <li>Image Processing: OpenCV</li>
+        <li>Databases: MySQL</li>
+        <li>Tools: VSCode, GitHub, PyQt5, Canva</li>
       </ul>
     </div>
   </div>
+
+  <!-- Typing effect JS -->
+  <script>
+    const text = "Hello, I'm Supriya.\nWelcome to my personal portfolio website.";
+    const speech = document.getElementById("speech");
+    let index = 0;
+
+    function typeText() {
+      if (index < text.length) {
+        speech.textContent += text[index];
+        index++;
+        setTimeout(typeText, 40);
+      }
+    }
+
+    setTimeout(() => {
+      speech.style.opacity = '1'; // force opacity if animation-delay fails
+      typeText();
+    }, 3000);
+  </script>
 </body>
 </html>
