--- a/index.html
+++ b/index.html
@@ -14,9 +14,29 @@
     }
 
     body {
-      background: linear-gradient(135deg, #2b2e4a, #4b3869);
+      font-family: 'Segoe UI', sans-serif;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
       color: #fff;
+      background: linear-gradient(135deg, #2e1a47, #154360, #138d75); /* Navy → Blue → Teal */
+      background-attachment: fixed;
+      overflow-x: hidden;
+      position: relative;
       padding: 30px;
+    }
+
+    /* Background Glow */
+    body::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: radial-gradient(circle at 20% 40%, rgba(255, 255, 255, 0.08), transparent 50%),
+                  radial-gradient(circle at 80% 60%, rgba(255, 255, 255, 0.06), transparent 50%);
+      pointer-events: none;
+      z-index: 0;
+      filter: blur(80px);
     }
 
     nav {
@@ -29,6 +49,8 @@
       backdrop-filter: blur(10px);
       padding: 1rem;
       border-radius: 10px;
+      z-index: 1;
+      position: relative;
     }
 
     nav a {
@@ -47,6 +69,8 @@
     .container {
       max-width: 800px;
       margin: 0 auto;
+      position: relative;
+      z-index: 1;
     }
 
     h1 {
@@ -74,8 +98,7 @@
       bottom: 0;
       left: -150px;
       opacity: 0;
-      animation: walkIn 3s forwards ease-out, waveHand 2s 3s infinite alternate ease-in-out;
-      transform-origin: bottom center;
+      animation: walkIn 3s forwards ease-out;
     }
 
     @keyframes walkIn {
@@ -84,79 +107,70 @@
       100% { left: 80px; opacity: 1; }
     }
 
-    @keyframes waveHand {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(6deg); }
-    }
-
+    /* Speech bubble using pixel image */
     .speech-bubble {
       position: absolute;
       bottom: 120px;
       left: 220px;
-      max-width: 300px;
-      background: #222;
-      border: 3px solid #fff;
-      border-radius: 0;
-      padding: 1rem 1.2rem;
-      color: #0ff;
+      width: 220px;
+      height: 180px;
+      background: url("assets/psb.png") no-repeat center/contain;
+      padding: 1rem;
       font-family: 'Courier New', monospace;
       font-size: 1rem;
+      color: #0ff;
       opacity: 0;
       white-space: pre-wrap;
-      word-wrap: break-word;
       animation: showBubble 1s forwards;
       animation-delay: 3s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
     }
 
     @keyframes showBubble {
       to { opacity: 1; }
     }
 
-    .speech-bubble::after {
-      content: "";
-      position: absolute;
-      left: -20px;
-      bottom: 20px;
-      width: 0;
-      height: 0;
-      border-top: 10px solid transparent;
-      border-bottom: 10px solid transparent;
-      border-right: 20px solid #fff;
+    .glass-card {
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 20px;
+      backdrop-filter: blur(25px);
+      -webkit-backdrop-filter: blur(25px);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+      padding: 2rem;
+      max-width: 600px;
+      width: 100%;
+      color: #fff;
+      text-align: center;
+      transition: transform 0.3s ease;
+      margin-bottom: 25px;
     }
 
-    .glass-card {
-      background: rgba(255, 255, 255, 0.25);
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      border-radius: 16px;
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.2);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      padding: 20px 25px;
-      margin-bottom: 25px;
-      transition: all 0.4s ease;
-      cursor: pointer;
-      overflow: hidden;
-      height: 60px;
+    .glass-card:hover {
+      transform: scale(1.02);
     }
 
     .glass-card h2 {
       font-size: 1.4rem;
-      margin-bottom: 10px;
+      margin-bottom: 0.6rem;
     }
 
-    .glass-card:hover {
-      height: auto;
-      background: rgba(255, 255, 255, 0.4);
-      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+    .glass-card p {
+      font-size: 0.95rem;
+      line-height: 1.5;
     }
 
     .glass-card ul {
       list-style: square;
-      margin-left: 20px;
+      text-align: left;
+      margin-left: 1rem;
     }
 
     .glass-card li {
-      margin: 5px 0;
+      margin-bottom: 0.4rem;
     }
 
     @media (max-width: 600px) {
@@ -168,6 +182,8 @@
       .speech-bubble {
         left: 140px;
         font-size: 0.9rem;
+        width: 180px;
+        height: 150px;
       }
     }
   </style>
