--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Supriya | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    /* Reset & Base Styles */
     * {
       margin: 0;
       padding: 0;
@@ -19,19 +18,20 @@
       display: flex;
       flex-direction: column;
       color: #fff;
-      background: linear-gradient(135deg, #2e1a47, #154360, #138d75); /* Navy → Blue → Teal */
+      background: linear-gradient(135deg, #2e1a47, #154360, #138d75);
       background-attachment: fixed;
       overflow-x: hidden;
       position: relative;
       padding: 30px;
     }
 
-    /* Background Glow */
     body::before {
       content: "";
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       background: radial-gradient(circle at 20% 40%, rgba(255, 255, 255, 0.08), transparent 50%),
                   radial-gradient(circle at 80% 60%, rgba(255, 255, 255, 0.06), transparent 50%);
       pointer-events: none;
@@ -41,22 +41,19 @@
 
     nav {
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
-      gap: 30px;
-      margin-bottom: 40px;
+      gap: 1.5rem;
+      padding: 1rem 0;
       background: rgba(255, 255, 255, 0.05);
       backdrop-filter: blur(10px);
-      padding: 1rem;
       border-radius: 10px;
       z-index: 1;
-      position: relative;
     }
 
     nav a {
-      text-decoration: none;
-      color: #fff;
+      color: #ffffff;
       font-weight: bold;
+      text-decoration: none;
       padding: 0.5rem 1rem;
       border-radius: 6px;
       transition: background 0.3s ease;
@@ -88,7 +85,7 @@
     .intro-scene {
       position: relative;
       height: 280px;
-      overflow: hidden;
+      overflow: visible;
       margin-bottom: 2rem;
     }
 
@@ -107,26 +104,30 @@
       100% { left: 80px; opacity: 1; }
     }
 
-    /* Speech bubble using pixel image */
-    .speech-bubble {
+    /* Pixelated speech bubble */
+    .speech-wrapper {
       position: absolute;
-      bottom: 120px;
+      bottom: 130px;
       left: 220px;
       width: 220px;
-      height: 180px;
-      background: url("assets/psb.png") no-repeat center/contain;
-      padding: 1rem;
-      font-family: 'Courier New', monospace;
-      font-size: 1rem;
-      color: #0ff;
+      height: 200px;
+      background: url("assets/psbr.png") no-repeat center/contain;
       opacity: 0;
-      white-space: pre-wrap;
       animation: showBubble 1s forwards;
       animation-delay: 3s;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    }
+
+    .speech-text {
+      position: absolute;
+      top: 30px;
+      left: 20px;
+      right: 20px;
+      font-family: 'Courier New', monospace;
+      font-size: 0.9rem;
+      color: #00ffff;
+      white-space: pre-wrap;
       text-align: center;
+      line-height: 1.4;
     }
 
     @keyframes showBubble {
@@ -174,16 +175,14 @@
     }
 
     @media (max-width: 600px) {
-      nav {
-        flex-direction: column;
-        gap: 12px;
-      }
-
-      .speech-bubble {
-        left: 140px;
-        font-size: 0.9rem;
+      .speech-wrapper {
+        left: 130px;
         width: 180px;
-        height: 150px;
+        height: 160px;
+      }
+      .speech-text {
+        font-size: 0.75rem;
+        top: 20px;
       }
     }
   </style>
@@ -198,11 +197,12 @@
   </nav>
 
   <div class="container">
-    <!-- 👧 Girl walking in -->
     <div class="intro-scene">
-      <img class="girl" src="assets/pixelme.jpg" alt="Girl walking in" />
-      <div class="speech-bubble" id="speech">
-        <!-- Typing will appear here -->
+      <img class="girl" src="assets/pixelme.png" alt="Girl walking in" />
+      <div class="speech-wrapper">
+        <div class="speech-text" id="speechText">
+          <!-- typing effect here -->
+        </div>
       </div>
     </div>
 
@@ -235,22 +235,20 @@
     </div>
   </div>
 
-  <!-- Typing effect JS -->
   <script>
     const text = "Hello, I'm Supriya.\nWelcome to my personal portfolio website.";
-    const speech = document.getElementById("speech");
+    const speechText = document.getElementById("speechText");
     let index = 0;
 
     function typeText() {
       if (index < text.length) {
-        speech.textContent += text[index];
+        speechText.textContent += text[index];
         index++;
         setTimeout(typeText, 40);
       }
     }
 
     setTimeout(() => {
-      speech.style.opacity = '1'; // force opacity if animation-delay fails
       typeText();
     }, 3000);
   </script>
