removed speech bubble & girl

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   </nav>
 
   <div class="container">
-    <h1>Hello, I'm Supriya 👋</h1>
+    <br><h1>Hello, I'm Supriya 👋</h1>
     <p>Welcome to my personal portfolio website.</p>
 
     <div class="glass-card">
