--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     }
 
     body {
-      font-family: 'Segoe UI', sans-serif;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
@@ -88,13 +87,13 @@
       backdrop-filter: blur(25px);
       -webkit-backdrop-filter: blur(25px);
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-      padding: 2rem;
+      padding: 1.5rem 2rem;
       max-width: 600px;
       width: 100%;
       color: #fff;
       text-align: center;
       transition: transform 0.3s ease;
-      margin-bottom: 25px;
+      margin: 0 auto 25px auto;
     }
 
     .glass-card:hover {
@@ -109,12 +108,13 @@
     .glass-card p {
       font-size: 0.95rem;
       line-height: 1.5;
+      margin-bottom: 0.4rem;
     }
 
     .glass-card ul {
       list-style: square;
       text-align: left;
-      margin-left: 1rem;
+      margin: 0.5rem 0 0 1.2rem;
     }
 
     .glass-card li {
@@ -146,18 +146,6 @@
     <p>Welcome to my personal portfolio website.</p>
 
     <div class="glass-card">
-      <h2>💼 Experience</h2>
-      <p>Web Developer Intern at Metricdust LLC</p>
-      <p>Apr/2025 – Jul/2025</p>
-    </div>
-
-    <div class="glass-card">
-      <h2>🎓 Education</h2>
-      <p>Bachelor of Engineering in Computer Science</p>
-      <p>GPA: 3.6</p>
-    </div>
-
-    <div class="glass-card">
       <h2>🛠️ Skills</h2>
       <ul>
         <li>Programming: Python, Java</li>
@@ -168,6 +156,18 @@
         <li>Databases: MySQL</li>
         <li>Tools: VSCode, GitHub, PyQt5, Canva</li>
       </ul>
+    </div>
+
+    <div class="glass-card">
+      <h2>💼 Experience</h2>
+      <p>Web Developer Intern at Metricdust LLC</p>
+      <p>Apr/2025 – Jul/2025</p>
+    </div>
+
+    <div class="glass-card">
+      <h2>🎓 Education</h2>
+      <p>Bachelor of Engineering in Computer Science</p>
+      <p>GPA: 3.6</p>
     </div>
   </div>
 </body>
