--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,29 @@
   <meta charset="UTF-8">
   <title>Resume</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    .resume-card {
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 20px;
+      backdrop-filter: blur(25px);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+      padding: 1.5rem;
+      max-width: 800px;
+      margin: 40px auto;
+    }
+
+    .resume-card h2 {
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+
+    embed {
+      border-radius: 12px;
+      width: 100%;
+      height: 700px;
+    }
+  </style>
 </head>
 <body>
   <nav>
@@ -15,10 +38,9 @@
   </nav>
 
   <div class="container">
-    <div class="glass-card">
+    <div class="resume-card">
       <h2>My Resume</h2>
-      <embed src="assets/Supriya.Resume.pdf" type="application/pdf" width="100%" height="600px" />
-      <p><a href="assets/Supriya.Resume.pdf" download>Download Resume</a></p>
+      <embed src="assets/Supriya.Resume.pdf" type="application/pdf" />
     </div>
   </div>
 </body>
