--- a/about.html
+++ b/about.html
@@ -15,11 +15,11 @@
   </nav>
 
   <div class="container">
-    <div class="glass-card">
-      <h2>About Me</h2>
-      <p>I’m a driven and versatile software developer with a passion for creating clean, intuitive, and impactful digital experiences. My work reflects a commitment to quality, curiosity, and continuous improvement.</p>
-      <br><p>I thrive on building innovative solutions and enjoy diving into new technologies, tools, and frameworks. I’ve completed multiple projects involving machine learning, combining analytical thinking with creative problem-solving, and I’m actively expanding my capabilities in full-stack development.</p>
-      <br><p>Beyond coding, I bring the same discipline and energy to athletics and teamwork, and I’m always eager to collaborate, exchange ideas, and grow alongside others.</p>
+    <h1>About Me</h1>
+    <div class="glass-card about-content">
+      <p>I'm a driven and versatile software developer with a passion for creating clean, intuitive, and impactful digital experiences. My work reflects a commitment to quality, curiosity, and continuous improvement.</p>
+      <p>I thrive on building innovative solutions and enjoy diving into new technologies, tools, and frameworks. I've completed multiple projects involving machine learning, combining analytical thinking with creative problem-solving, and I'm actively expanding my capabilities in full-stack development.</p>
+      <p>Beyond coding, I bring the same discipline and energy to athletics and teamwork, and I'm always eager to collaborate, exchange ideas, and grow alongside others.</p>
     </div>
   </div>
 </body>
