--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Supriya | Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav>
@@ -34,7 +34,7 @@
         <li>Machine Learning: Scikit-learn, TensorFlow, MATLAB, Pandas, NumPy</li>
         <li>Image Processing: OpenCV</li>
         <li>Databases: MySQL</li>
-        <li>Tools:  Microsoft 365, VSCode, GitHub, expo.dev, PyQt5, Canva</li>
+        <li>Tools: Microsoft 365, VSCode, GitHub, expo.dev, PyQt5, Canva</li>
       </ul>
     </div>
 
