--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Contact</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav>
@@ -15,12 +16,18 @@
   </nav>
 
   <div class="container">
+    <h1>Contact Me</h1>
     <div class="glass-card">
-      <h2>Contact Me</h2>
       <div class="social-icons">
-        <a href="mailto:supriyahegde71@gmail.com" target="_blank"><img src="https://img.icons8.com/color/48/gmail-new.png" alt="Gmail"></a>
-        <a href="https://www.linkedin.com/in/supriya-hegde07" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn"></a>
-        <a href="https://github.com/supriyahegde773" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub"></a>
+        <a href="mailto:supriyahegde71@gmail.com" target="_blank">
+          <img src="https://img.icons8.com/color/48/gmail-new.png" alt="Gmail">
+        </a>
+        <a href="https://www.linkedin.com/in/supriya-hegde07" target="_blank">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
+        </a>
+        <a href="https://github.com/supriyahegde773" target="_blank">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
+        </a>
       </div>
     </div>
   </div>
