--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Projects</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <style>
     .tab-buttons {
       display: flex;
@@ -22,6 +23,11 @@
       backdrop-filter: blur(8px);
       border-radius: 8px;
       font-weight: 500;
+      transition: all 0.3s ease;
+    }
+
+    .tab-buttons button:hover {
+      background: rgba(255, 255, 255, 0.15);
     }
 
     .tab-buttons button.active {
@@ -39,91 +45,26 @@
     .tab-content.active {
       display: flex;
     }
+
+    .project-image {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+      border-radius: 12px;
+      margin-bottom: 1rem;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    @media screen and (max-width: 600px) {
+      .glass-card {
+        padding: 1.5rem;
+      }
+
+      .project-image {
+        height: 180px;
+      }
+    }
   </style>
-  <style>
-  .tab-buttons {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 2rem;
-  }
-
-  .tab-buttons button {
-    padding: 0.5rem 1rem;
-    border: none;
-    background: rgba(255, 255, 255, 0.08);
-    color: #fff;
-    cursor: pointer;
-    backdrop-filter: blur(8px);
-    border-radius: 8px;
-    font-weight: 500;
-  }
-
-  .tab-buttons button.active {
-    background-color: #00ffe7;
-    color: #000;
-  }
-
-  .tab-content {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-  }
-
-  .tab-content.active {
-    display: flex;
-  }
-
-  /* Image visible fix */
-  .glass-card {
-    max-width: 640px;
-    width: 100%;
-    padding: 2rem;
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 20px;
-    backdrop-filter: blur(25px);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-    transition: transform 0.3s ease;
-    color: #fff;
-    text-align: center;
-  }
-
-  .glass-card:hover {
-    transform: scale(1.02);
-  }
-
-  .glass-card img.project-image {
-    width: 100%;
-    height: 220px;
-    object-fit: cover;
-    border-radius: 12px;
-    margin-bottom: 1rem;
-  }
-
-  .glass-card h2 {
-    font-size: 1.3rem;
-    margin-bottom: 0.6rem;
-  }
-
-  .glass-card p {
-    font-size: 0.95rem;
-    line-height: 1.5;
-  }
-
-  @media screen and (max-width: 600px) {
-    .glass-card {
-      padding: 1.2rem;
-    }
-
-    .glass-card img.project-image {
-      height: 180px;
-    }
-  }
-</style>
-
 </head>
 <body>
   <nav>
@@ -135,7 +76,7 @@
   </nav>
 
   <div class="container">
-    <h1 style="text-align: center;">Projects</h1>
+    <h1>Projects</h1>
 
     <div class="tab-buttons">
       <button onclick="showTab('academic')" id="academicTab" class="active">Academic Projects</button>
@@ -144,25 +85,25 @@
 
     <div id="academic" class="tab-content active">
       <div class="glass-card">
-        <img src="assets/biometric.jpeg" class="project-image" alt="Biometric Watermarking" />
+        <img src="assets/biometric.jpeg" class="project-image" alt="Biometric Watermarking">
         <h2>Biometric Watermarking using Deep Learning</h2>
         <p>Embedded fingerprint data into iris images using DWT, DCT, and SVD for secure, attack-resistant watermarking in digital ID, medical records, and copyright protection.</p>
       </div>
 
       <div class="glass-card">
-        <img src="assets/social media analytics.jpg" class="project-image" alt="Social Media Analytics" />
+        <img src="assets/social media analytics.jpg" class="project-image" alt="Social Media Analytics">
         <h2>Real-Time Social Media Analytics</h2>
         <p>Built a pipeline for real-time sentiment analysis and topic modeling. Optimized via Grid Search and deployed using Flask API.</p>
       </div>
 
       <div class="glass-card">
-        <img src="assets/brain tumor.png" class="project-image" alt="Brain Tumor Detection" />
+        <img src="assets/brain tumor.png" class="project-image" alt="Brain Tumor Detection">
         <h2>Brain Tumor Detection using ML</h2>
         <p>Used CNNs to classify brain tumors from MRI images. Integrated PyQt5 GUI for predictions with OpenCV preprocessing.</p>
       </div>
 
       <div class="glass-card">
-        <img src="assets/Movie booking.jpg" class="project-image" alt="Movie Booking" />
+        <img src="assets/Movie booking.jpg" class="project-image" alt="Movie Booking">
         <h2>Movie Ticket Booking System</h2>
         <p>Django + MySQL system with full CRUD, user login, and movie schedule management for booking tickets.</p>
       </div>
@@ -170,31 +111,31 @@
 
     <div id="personal" class="tab-content">
       <div class="glass-card">
-        <img src="assets/hd invite.png" class="project-image" alt="Invitations" />
+        <img src="assets/hd invite.png" class="project-image" alt="Invitations">
         <h2>Hostel Event Invitations</h2>
         <p>Designed digital and print invitations for college hostel events using Canva and Adobe tools.</p>
       </div>
 
       <div class="glass-card">
-        <img src="assets/food label.png" class="project-image" alt="Food Label" />
+        <img src="assets/food label.png" class="project-image" alt="Food Label">
         <h2>Label Design for Food Business</h2>
         <p>Designed branding and clear food packaging labels using Canva for a local business.</p>
       </div>
 
       <div class="glass-card">
-        <img src="assets/Typing.png" class="project-image" alt="Typing Game" />
+        <img src="assets/Typing.png" class="project-image" alt="Typing Game">
         <h2>Typing Speed Game</h2>
         <p>Fun browser game built in HTML to help improve typing accuracy and speed in real-time.</p>
       </div>
 
       <div class="glass-card">
-        <img src="assets/Tiles.png" class="project-image" alt="Memory Game" />
+        <img src="assets/Tiles.png" class="project-image" alt="Memory Game">
         <h2>Memory Matching Game</h2>
         <p>Flip-card matching game to test and train memory. Built using HTML.</p>
       </div>
 
       <div class="glass-card">
-        <img src="assets/ginger&milk.png" class="project-image" alt="Flappy Gingerbread" />
+        <img src="assets/ginger&milk.png" class="project-image" alt="Flappy Gingerbread">
         <h2>Flappy Gingerbread Game</h2>
         <p>Inspired by Flappy Bird — dodge milk obstacles with a flying gingerbread.</p>
       </div>
